add workshops dir with d3js

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-files/
-themes/codehub/.sass-cache/
-packages/
-config/
-hidden.txt
-docs/
-
+/bristolrivers/
+/files/
+/themes/codehub/.sass-cache/
+/packages/
+/config/
+/hidden.txt
+/docs/
+/.htaccess
